@@ -11,6 +11,11 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-02-07
+2012-09-24 Andy Salnikov
+- DdlPythonInterfaces: rearrange includes to get rid of the warnings
+  (Python.h has to be included first)
+
 Tag: V00-02-06
 2012-09-11 Andy Salnikov
 - DdlPythonInterfaces: generated stuff goes to a separate namespace
